--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -141,11 +141,8 @@ jobs:
           df -h
 
           sudo apt-get update
-          sudo apt-get remove -y '^dotnet-.*'
-          sudo apt-get remove -y '^llvm-.*'
-          sudo apt-get remove -y 'php.*'
-          sudo apt-get remove -y '^mongodb-.*'
-          sudo apt-get autoremove -y
+          sudo apt-get purge -y '^dotnet-.*' '^llvm-.*' 'php.*' '^mongodb-.*'
+          sudo apt-get autoremove -y --purge
           sudo apt-get clean
           sudo rm -rf /usr/local/.ghcup &
           sudo rm -rf /usr/local/lib/android &
