--- a/runtimes/pytorch/ubi9-python-3.12/pyproject.toml
+++ b/runtimes/pytorch/ubi9-python-3.12/pyproject.toml
@@ -6,9 +6,8 @@ requires-python = "==3.12.*"
 dependencies = [
     # PyTorch packages
     "tensorboard~=2.20.0",
-    "torch==2.6.0+cu126",
-    "torchvision==0.21.0+cu126; platform_machine == 'x86_64'",
-    "torchvision==0.21.0; platform_machine == 'aarch64'", # CUDA version not pre-built by pytorch for aarch64
+    "torch==2.6.0",
+    "torchvision==0.21.0",
 
     # torch deps that get missed by uv with universal resolution
     "nvidia-cuda-nvrtc-cu12==12.6.77 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
